Define definite height to fix list overflow

--- a/src/components/ContentSection/ContentSection.module.scss
+++ b/src/components/ContentSection/ContentSection.module.scss
@@ -1,7 +1,5 @@
 .contentSection {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   padding-top: var(--header-spacing);
   padding-left: 1rem;
   padding-right: 1rem;
