--- a/src/components/TabList/TabList.module.scss
+++ b/src/components/TabList/TabList.module.scss
@@ -1,5 +1,5 @@
 .tabList {
-  height: 100%;
+  height: 360px;
 
   ul {
     height: 100%;
